Manage User Table Alignment Issue fixed

--- a/src/app/components/framework/smarttable/smarttable.component.scss
+++ b/src/app/components/framework/smarttable/smarttable.component.scss
@@ -252,27 +252,27 @@ $dateColumnWidth:110px;
 .manageaccUser {
     .ag-fresh .ag-ltr .ag-header-cell[title~="Actions"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="0"] {
         width:5% !important;
-        left:0% !important;
+        left:2% !important;
     }
     .ag-fresh .ag-ltr .ag-header-cell[colid~="firstName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="firstName"] {
-        width:20% !important;
-        left:5% !important;
+        width:17% !important;
+        left:9% !important;
     }
     .ag-fresh .ag-ltr .ag-header-cell[colid~="lastName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="lastName"] {
-        width:20% !important;
+        width:19.5% !important;
         left:25% !important;
     }
     .ag-fresh .ag-ltr .ag-header-cell[colid~="emailId"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="emailId"] {
-        width:25% !important;
-        left:45% !important;
+        width:19% !important;
+        left:44% !important;
     }
     .ag-fresh .ag-ltr .ag-header-cell[colid~="phoneNumber"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="phoneNumber"] {
-        width:10% !important;
-        left:70% !important;
+        width:20% !important;
+        left:62% !important;
     }
     .ag-fresh .ag-ltr .ag-header-cell[colid~="roleName"], .ag-fresh .ag-ltr .ag-cell-value[col-id~="roleName"] {
-        width:20% !important;
-        left:80% !important;
+        width:19% !important;
+        left:81% !important;
     }
 }
 
